// Copyright (c) Aalyria Technologies, Inc., and its affiliates.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package aalyria.spacetime.tools.nbictl.provisioning;

import "api/provisioning/v1alpha/provisioning.proto";

option java_package = "com.aalyria.spacetime.tools.nbictl.provisioning";
option go_package = "aalyria.com/spacetime/tools/nbictl/provisioning";

// A container message for a collection of any and all possible
// Provisioning API resources.
//
// This can be used for representing things like a set of Provisioning
// API resources within and instance or staged for commit/update to an
// instance.
message ProvisioningResources {
  repeated aalyria.spacetime.api.provisioning.v1alpha.P2pSrTePolicy p2p_sr_te_policies = 1;
  repeated aalyria.spacetime.api.provisioning.v1alpha.P2pSrTePolicyCandidatePath p2p_sr_te_policy_candidate_paths = 2;
  repeated aalyria.spacetime.api.provisioning.v1alpha.Downtime downtimes = 3;
  repeated aalyria.spacetime.api.provisioning.v1alpha.ProtectionAssociationGroup protection_association_groups = 4;
  repeated aalyria.spacetime.api.provisioning.v1alpha.DisjointAssociationGroup disjoint_association_groups = 5;
}
